// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders snapshot of disabled 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
}

.emotion-1 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25;
  font-weight: 800;
  color: #05192D;
  margin-bottom: 8px;
}

.emotion-2 {
  position: relative;
  width: 100%;
  height: 36px;
  opacity: 0.6;
}

.emotion-2::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  color: #05192D;
  background-color: #FFFFFF;
  padding-left: 12px;
  padding-right: 36px;
}

.emotion-3:disabled {
  cursor: default;
}

.emotion-4 {
  position: absolute;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  top: 0;
  right: 12px;
  color: #05192D;
}

<div
  class="emotion-0"
>
  <label
    class="emotion-1"
    for="form-control-123abC"
  >
    Pick a technology
  </label>
  <div
    class="emotion-2"
  >
    <select
      class="emotion-3"
      disabled=""
      id="form-control-123abC"
    >
      <option
        value="python"
      >
        Python
      </option>
      <option
        value="sql"
      >
        SQL
      </option>
    </select>
    <div
      class="emotion-4"
    >
      <svg
        aria-hidden="true"
        height="16"
        viewBox="0 0 18 18"
        width="16"
      >
        <path
          d="m8.244 12.155-4.95-4.947a1 1 0 1 1 1.415-1.415l4.294 4.291 4.293-4.279a.998.998 0 0 1 1.413.003c.39.392.388 1.025-.003 1.415l-5.002 4.986a.998.998 0 0 1-1.46-.054Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select renders snapshot of inverted 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
}

.emotion-1 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25;
  font-weight: 800;
  color: #FFFFFF;
  margin-bottom: 8px;
}

.emotion-2 {
  position: relative;
  width: 100%;
  height: 36px;
  opacity: 1;
}

.emotion-2::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  color: #FFFFFF;
  background-color: #213147;
  padding-left: 12px;
  padding-right: 36px;
}

.emotion-3:disabled {
  cursor: default;
}

.emotion-4 {
  position: absolute;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  top: 0;
  right: 12px;
  color: #FFFFFF;
}

<div
  class="emotion-0"
>
  <label
    class="emotion-1"
    for="form-control-123abC"
  >
    Pick a technology
  </label>
  <div
    class="emotion-2"
  >
    <select
      class="emotion-3"
      id="form-control-123abC"
    >
      <option
        value="python"
      >
        Python
      </option>
      <option
        value="sql"
      >
        SQL
      </option>
    </select>
    <div
      class="emotion-4"
    >
      <svg
        aria-hidden="true"
        height="16"
        viewBox="0 0 18 18"
        width="16"
      >
        <path
          d="m8.244 12.155-4.95-4.947a1 1 0 1 1 1.415-1.415l4.294 4.291 4.293-4.279a.998.998 0 0 1 1.413.003c.39.392.388 1.025-.003 1.415l-5.002 4.986a.998.998 0 0 1-1.46-.054Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select renders snapshot of placeholder, when value is set to empty string 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
}

.emotion-1 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25;
  font-weight: 800;
  color: #05192D;
  margin-bottom: 8px;
}

.emotion-2 {
  position: relative;
  width: 100%;
  height: 36px;
  opacity: 1;
}

.emotion-2::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  color: #05192D;
  background-color: #FFFFFF;
  padding-left: 12px;
  padding-right: 36px;
  color: #65707C;
}

.emotion-3:disabled {
  cursor: default;
}

.emotion-4 {
  position: absolute;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  top: 0;
  right: 12px;
  color: #05192D;
}

<div
  class="emotion-0"
>
  <label
    class="emotion-1"
    for="form-control-123abC"
  >
    Pick a technology
  </label>
  <div
    class="emotion-2"
  >
    <select
      class="emotion-3"
      id="form-control-123abC"
    >
      <option
        value=""
      >
        Placeholder
      </option>
      <option
        value="python"
      >
        Python
      </option>
      <option
        value="sql"
      >
        SQL
      </option>
    </select>
    <div
      class="emotion-4"
    >
      <svg
        aria-hidden="true"
        height="16"
        viewBox="0 0 18 18"
        width="16"
      >
        <path
          d="m8.244 12.155-4.95-4.947a1 1 0 1 1 1.415-1.415l4.294 4.291 4.293-4.279a.998.998 0 0 1 1.413.003c.39.392.388 1.025-.003 1.415l-5.002 4.986a.998.998 0 0 1-1.46-.054Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select renders snapshot of required with error 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
}

.emotion-1 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25;
  font-weight: 800;
  color: #05192D;
  margin-bottom: 8px;
}

.emotion-2 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  font-size: 12px;
  color: #65707C;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: right;
}

.emotion-3 {
  font-size: 14px;
  color: #DD3400;
}

.emotion-4 {
  position: relative;
  width: 100%;
  height: 36px;
  opacity: 1;
}

.emotion-4::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  color: #05192D;
  background-color: #FFFFFF;
  padding-left: 12px;
  padding-right: 36px;
  color: #65707C;
  border-color: #DD3400;
  box-shadow: 0 0 0 1px #DD3400;
}

.emotion-5:disabled {
  cursor: default;
}

.emotion-6 {
  position: absolute;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  top: 0;
  right: 12px;
  color: #05192D;
}

.emotion-7 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  position: absolute;
  z-index: 1;
  bottom: -8px;
  left: 0;
  -webkit-transform: translateY(100%);
  -moz-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  color: #C01100;
  line-height: 1.25;
}

<div
  class="emotion-0"
>
  <label
    class="emotion-1"
    for="form-control-123abC"
  >
    Pick a technology
    <span
      aria-hidden="true"
      class="emotion-2"
    >
      <span
        class="emotion-3"
      >
        •
      </span>
       Required
    </span>
  </label>
  <div
    class="emotion-4"
  >
    <select
      aria-describedby="form-control-error-123abC"
      aria-errormessage="form-control-error-123abC"
      aria-invalid="true"
      class="emotion-5"
      id="form-control-123abC"
      required=""
    >
      <option
        value=""
      >
        Select appropriate technology...
      </option>
      <option
        value="python"
      >
        Python
      </option>
      <option
        value="sql"
      >
        SQL
      </option>
    </select>
    <div
      class="emotion-6"
    >
      <svg
        aria-hidden="true"
        height="16"
        viewBox="0 0 18 18"
        width="16"
      >
        <path
          d="m8.244 12.155-4.95-4.947a1 1 0 1 1 1.415-1.415l4.294 4.291 4.293-4.279a.998.998 0 0 1 1.413.003c.39.392.388 1.025-.003 1.415l-5.002 4.986a.998.998 0 0 1-1.46-.054Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <p
    class="emotion-7"
    id="form-control-error-123abC"
  >
    Select a technology.
  </p>
</div>
`;

exports[`Select renders snapshot of size large 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
}

.emotion-1 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25;
  font-weight: 800;
  color: #05192D;
  margin-bottom: 8px;
}

.emotion-2 {
  position: relative;
  width: 100%;
  height: 48px;
  opacity: 1;
}

.emotion-2::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  color: #05192D;
  background-color: #FFFFFF;
  padding-left: 12px;
  padding-right: 36px;
}

.emotion-3:disabled {
  cursor: default;
}

.emotion-4 {
  position: absolute;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  top: 0;
  right: 12px;
  color: #05192D;
}

<div
  class="emotion-0"
>
  <label
    class="emotion-1"
    for="form-control-123abC"
  >
    Pick a technology
  </label>
  <div
    class="emotion-2"
  >
    <select
      class="emotion-3"
      id="form-control-123abC"
    >
      <option
        value="python"
      >
        Python
      </option>
      <option
        value="sql"
      >
        SQL
      </option>
    </select>
    <div
      class="emotion-4"
    >
      <svg
        aria-hidden="true"
        height="16"
        viewBox="0 0 18 18"
        width="16"
      >
        <path
          d="m8.244 12.155-4.95-4.947a1 1 0 1 1 1.415-1.415l4.294 4.291 4.293-4.279a.998.998 0 0 1 1.413.003c.39.392.388 1.025-.003 1.415l-5.002 4.986a.998.998 0 0 1-1.46-.054Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select renders snapshot of size medium 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
}

.emotion-1 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25;
  font-weight: 800;
  color: #05192D;
  margin-bottom: 8px;
}

.emotion-2 {
  position: relative;
  width: 100%;
  height: 36px;
  opacity: 1;
}

.emotion-2::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  color: #05192D;
  background-color: #FFFFFF;
  padding-left: 12px;
  padding-right: 36px;
}

.emotion-3:disabled {
  cursor: default;
}

.emotion-4 {
  position: absolute;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  top: 0;
  right: 12px;
  color: #05192D;
}

<div
  class="emotion-0"
>
  <label
    class="emotion-1"
    for="form-control-123abC"
  >
    Pick a technology
  </label>
  <div
    class="emotion-2"
  >
    <select
      class="emotion-3"
      id="form-control-123abC"
    >
      <option
        value="python"
      >
        Python
      </option>
      <option
        value="sql"
      >
        SQL
      </option>
    </select>
    <div
      class="emotion-4"
    >
      <svg
        aria-hidden="true"
        height="16"
        viewBox="0 0 18 18"
        width="16"
      >
        <path
          d="m8.244 12.155-4.95-4.947a1 1 0 1 1 1.415-1.415l4.294 4.291 4.293-4.279a.998.998 0 0 1 1.413.003c.39.392.388 1.025-.003 1.415l-5.002 4.986a.998.998 0 0 1-1.46-.054Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select renders snapshot of size small 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
}

.emotion-1 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25;
  font-weight: 800;
  color: #05192D;
  margin-bottom: 8px;
}

.emotion-2 {
  position: relative;
  width: 100%;
  height: 24px;
  opacity: 1;
}

.emotion-2::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  color: #05192D;
  background-color: #FFFFFF;
  padding-left: 6px;
  padding-right: 26px;
}

.emotion-3:disabled {
  cursor: default;
}

.emotion-4 {
  position: absolute;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  top: 0;
  right: 6px;
  color: #05192D;
}

<div
  class="emotion-0"
>
  <label
    class="emotion-1"
    for="form-control-123abC"
  >
    Pick a technology
  </label>
  <div
    class="emotion-2"
  >
    <select
      class="emotion-3"
      id="form-control-123abC"
    >
      <option
        value="python"
      >
        Python
      </option>
      <option
        value="sql"
      >
        SQL
      </option>
    </select>
    <div
      class="emotion-4"
    >
      <svg
        aria-hidden="true"
        height="16"
        viewBox="0 0 18 18"
        width="16"
      >
        <path
          d="m8.244 12.155-4.95-4.947a1 1 0 1 1 1.415-1.415l4.294 4.291 4.293-4.279a.998.998 0 0 1 1.413.003c.39.392.388 1.025-.003 1.415l-5.002 4.986a.998.998 0 0 1-1.46-.054Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select renders snapshot with label and description 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
}

.emotion-1 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25;
  font-weight: 800;
  color: #05192D;
  margin-bottom: 8px;
}

.emotion-2 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  line-height: 1.5;
  margin-bottom: 8px;
  color: #05192D;
  font-size: 14px;
  line-height: 1.25;
  margin-top: -4px;
}

.emotion-3 {
  position: relative;
  width: 100%;
  height: 36px;
  opacity: 1;
}

.emotion-3::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  color: #05192D;
  background-color: #FFFFFF;
  padding-left: 12px;
  padding-right: 36px;
}

.emotion-4:disabled {
  cursor: default;
}

.emotion-5 {
  position: absolute;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  top: 0;
  right: 12px;
  color: #05192D;
}

<div
  class="emotion-0"
>
  <label
    class="emotion-1"
    for="form-control-123abC"
  >
    Pick a technology
  </label>
  <p
    class="emotion-2"
  >
    Additional description
  </p>
  <div
    class="emotion-3"
  >
    <select
      class="emotion-4"
      id="form-control-123abC"
    >
      <option
        value="python"
      >
        Python
      </option>
      <option
        value="sql"
      >
        SQL
      </option>
    </select>
    <div
      class="emotion-5"
    >
      <svg
        aria-hidden="true"
        height="16"
        viewBox="0 0 18 18"
        width="16"
      >
        <path
          d="m8.244 12.155-4.95-4.947a1 1 0 1 1 1.415-1.415l4.294 4.291 4.293-4.279a.998.998 0 0 1 1.413.003c.39.392.388 1.025-.003 1.415l-5.002 4.986a.998.998 0 0 1-1.46-.054Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;
